test : StockRepositoryTest 코드 수정